--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,8 +18,8 @@
       [errorText]="username.length < 8 ? 'The username is not long enough': ''" formControlName="username">
     </ion-input>
 
-    <ion-input mode="md" labelPlacement="floating" fill="outline" label="Phone" [clearInput]="false"
-      [errorText]="phone.length < 8 ? 'The phone is not long enough': ''" formControlName="phone">
+    <ion-input mode="md" labelPlacement="floating" fill="outline" label="Phone number" [clearInput]="false"
+      [errorText]="phone.length < 8 ? 'The phone number is not long enough': ''" formControlName="phone">
     </ion-input>
   </form>
 
